# AgroMind-AI

./: .env.example  .gitignore  =0.1.0  =0.7.0  CLAUDE.md  Dockerfile  README.md  agromind_implementation_plan.md  celerybeat-schedule  docker-compose.yml  pyproject.toml  questions.txt  requirements.txt
.claude/: settings.local.json
agents/: CLAUDE.md  explanation_agent.py  intent_agent.py  market_agent.py  planner_agent.py  policy_agent.py  risk_agent.py  validation_agent.py
api/: main.py  middleware.py  schemas.py
api/routers/: health.py  ingest.py  query.py
config/: crops.yaml  districts.yaml  gemini.py  settings.py
config/prompts/: intent_prompt.yaml  metadata_prompt.yaml  planner_prompt.yaml  risk_prompt.yaml  validation_prompt.yaml
evaluation/: CLAUDE.md  run_cache_sim.py  run_crag_eval.py  run_ragas.py
ingestion/: CLAUDE.md  pipeline.py
ingestion/chunkers/: fixed_chunker.py  late_chunker.py  parent_child_chunker.py  semantic_chunker.py  sliding_chunker.py
ingestion/crawlers/: doa_crawler.py  harti_crawler.py  market_price_scraper.py
ingestion/processors/: metadata_tagger.py  pdf_extractor.py  weather_ingest.py
knowledge/: CLAUDE.md  cag.py  crag.py  embedder.py  indexer.py  reranker.py
knowledge/retrievers/: geo_retriever.py  semantic_retriever.py  temporal_retriever.py
monitoring/: prometheus.yml
orchestration/: agent_graph.py  checkpointer.py  edges.py  state.py
scripts/: index_documents.py  init_db.sql  milestone_p1.py
tests/: conftest.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  (+1 more)
(+27 files in other folders)
