[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agromind-ai"
version = "0.1.0"
description = "Agentic RAG system for Sri Lankan agricultural intelligence"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "orchestration*", "ingestion*", "knowledge*", "api*", "config*", "evaluation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
